# OLRONN

./: .gitignore  .gitmodules  README.md  environment.yaml  main.py  pyproject.toml  requirements.txt  setup.py
notebooks/: adaptive_schedules.ipynb  ae_performance.ipynb  batch_size_drift.ipynb  concat_results.ipynb  contam_filtering.ipynb  contamination.ipynb  detector_comparison.ipynb  dev.ipynb  effective_lrs.ipynb  hparams_contam.ipynb  lr_plots.ipynb  overview_plot.ipynb  pretune.ipynb  pretune_loss.ipynb  runtimes.ipynb  sgd_trajectory.ipynb  tables.ipynb  test_anom_det.ipynb  test_anom_det.py  toy_sgd.py  utils.py  wd_momentum.ipynb
pub/: .gitignore  aaai24.bib  anonymous-submission-latex-2024.tex  bibliography.bib  collas2024_conference.bib  collas2024_conference.bst  collas2024_conference.sty  collas2024_conference.tex  lncs.bbx  lncs.cbx  outsourced.tex  samplepaper.tex  supplementary.tex  text.tex
pub/tables/: drift_detector_top1.tex  lr_resetting_top1.tex  lr_resetting_top3.tex  lr_tuning.tex  lr_tuning_full.tex  optimizers_full_top1.tex  optimizers_top1.tex  optimizers_top3.tex  (+6 more)
src/: utils.py
tools/: adaptive_schedules.py  base.py  batch_size_drift.py  contam_base.py  contam_filtering copy.py  contam_filtering.py  contamination.py  debug.py  detector_comparison.py  effective_lrs.py  filtering_sensitivity.py  model_sizes.py  model_sizes_dog.py  momentum.py  optimizers.py  pretune.py  pretune_ae.py  pretune_batch.py  pretune_full.py  pretune_steepness.py  run_all.sh  run_experiments.sh  runtimes.py  schedule.py  test_ae_performance.py  weight_decay.py
(+10 files in other folders)
