[project]
name = "adalr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adabelief-pytorch>=0.2.1",
    "came-pytorch>=0.1.3",
    "dadaptation>=3.2",
    "dog-optimizer>=1.0.3",
    "jupyter>=1.1.1",
    "lion-pytorch>=0.2.3",
    "lomo-optim>=0.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "pbsgd>=1.0",
    "prodigyopt>=1.1.2",
    "river>=0.20.1",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
